--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 host_key_checking = False
-remote_user = helltala
+# remote_user = helltala
 interpreter_python = /usr/bin/python3
 command_warnings=False
+deprecation_warnings=False
