--- a/playme.yml
+++ b/playme.yml
@@ -122,10 +122,11 @@
 
     - name: Add system user to the Docker group
       user:
-        name: "{{ lookup('env', 'USER') }}"
+        name: "{{ ansible_user_id }}"
         append: yes
         groups: docker
-      when: add_user_to_docker_group and ansible_user != 'root'
+      when: add_user_to_docker_group and ansible_user_id != 'root'
+
 
 
 ############################### 
