--- a/playme.yml
+++ b/playme.yml
@@ -43,8 +43,8 @@
   vars:
     install_docker: true
     install_docker_compose: true
-    linux_user_name: debi
-    KUBE_VER: "stable"
+    linux_user_name: debi #change "debi" with your linux username, so you can use command: docker without sudo in front of it :), also you need to log off and login again or reboot
+    KUBE_VER: "v1.27.0"
     KIND_VER: "v0.18.0"
 
 ############################### 
@@ -109,15 +109,6 @@
         name: docker-compose
         state: present
       when: install_docker_compose and ('docker-compose' not in package_info.ansible_facts.packages)
-
-
-#does not work, it resurns root user
-    # - name: Add system user to the Docker group
-    #   user:
-    #     name: "{{ ansible_user_id }}"
-    #     append: yes
-    #     groups: docker
-    #   when: add_user_to_docker_group
 
 
     - name: Add system user to the Docker group
